# cpp-by-practice

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  vcpkg.json
content/: toc.json
content/chapters/01-variables/: type-conversions.md  variables.md
content/chapters/02-basic-types/: char-bool.md  enums-typedef.md  numbers.md
content/chapters/03-functions/: function-pointers.md  functions.md  inline-constexpr-functions.md
content/chapters/04-flow-control/: flow-control.md  if-init-constexpr-if.md
content/chapters/05-arrays-strings/: arrays.md  string-views.md  strings.md
content/chapters/06-pointers-references/: const-pointers-void-ptrs.md  pointers.md  references.md
content/chapters/07-structs-classes/: classes.md  constructors.md  nested-classes-namespaces.md  operator-overloading.md  static-members-friends.md  structs.md
content/chapters/08-oop/: abstract-interfaces.md  encapsulation-patterns.md  inheritance.md  polymorphism.md
content/chapters/09-templates/: class-templates.md  function-templates.md  template-specialization.md
content/chapters/10-stl/: algorithms.md  iterators.md  map.md  set-multimap.md  vector.md
content/chapters/11-memory/: memory-pitfalls.md  new-delete.md  (+1 more)
src/: main.cpp
src/models/: chapter.h  exercise.h
src/routes/: api_routes.h  page_routes.h
src/services/: exercise_service.h  markdown_service.h  sandbox_runner.h
src/utils/: file_utils.h
static/css/: codemirror.css  style.css
static/js/: app.js  codemirror.js  editor.js
templates/: error.html  exercise.html  index.html
(+25 files in other folders)
